test/good/div-before-mul-1.expected.out
test/good/div-before-mul-1.tact:5:21:
  4 |   let c: Int = 2;
> 5 |   let result: Int = a / b * c; // error: Division before multiplication
                          ^
  6 |   return result;
Divide Before Multiply
Help: Consider rearranging the operations: division should follow multiplication
See: https://nowarp.github.io/docs/misti/docs/detectors/DivideBeforeMultiply